--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -31,14 +31,14 @@ a {
 }
 
 /* NAVIGATION */
-.nav {
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: absolute;
     width: 92%;
-    height: 60px;
     z-index: 2;
+    padding: 0 4%;
 }
 
 .brand-text {
@@ -71,7 +71,7 @@ a {
 
 .main-block {
     position: absolute;
-    max-width: 650px;
+    max-width: 70%;
     top: 50%;
     transform: translateY(-50%); 
     left: 15%;   
@@ -81,12 +81,14 @@ a {
     position: relative;
     font-size: 100px;
     line-height: 0.8em;
+    font-size: 6vmax;
+    max-width: 90%;
 }
 .main-title::after {
     content: '';
     position: absolute;
-    width: 80px;
-    height: 10px;
+    width: 60px;
+    height: 5px;
     top: 80%;
     margin-left: 20px;
     transform: translateY(-50%);
@@ -198,3 +200,58 @@ a {
     -moz-user-select: none;      /* Firefox */
     -ms-user-select: none;       /* Internet Explorer/Edge */
 }
+
+
+/* MEDIA */
+@media (max-width: 991px) {
+    nav {
+        flex-direction: column;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+    .nav-menu {
+        width: 100%;
+        justify-content: space-around;
+    }
+    .main-block {
+        margin-top: 7%;
+    }
+    .main-title {
+        max-width: 100%;
+        font-size: 8vmax;
+
+    }
+    .main-title::after {
+        left: 0;
+        top: 110%;
+        margin-left: 0;
+    }
+    .main-link {
+        display: none;
+    }
+    footer {
+        display: none;
+    }
+}
+
+@media (max-width: 479px) {
+    .main-title {
+        font-size: 5em;
+        line-height: 1;
+    }
+    .main-title::after {
+        left: 0;
+        top: 54%;
+        margin-left: 0;
+    }
+}
+
+@media (max-width: 420px) {
+    .main-title {
+        margin-top: 30%;
+    }
+    .main-title::after {
+        top: 35%;
+    }
+}
+
