--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -54,12 +54,27 @@ nav {
     margin-right: 40px;
     line-height: 60px;
     opacity: 0.9;
+    position: relative;
+}
+.nav-menu__item::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 16px;
+    width: 0;
+    height: 2px;
+    background-color: #fff;
+    opacity: 0.9;
+    transition: .3s;
 }
 .nav-menu__item:last-child {
     margin-right: 0px;
 }
 .nav-menu__item:hover {
-    text-decoration: line-through;
+    opacity: 1;
+}
+.nav-menu__item:hover::after {
+    width: 100%;
     opacity: 1;
 }
 
@@ -158,7 +173,26 @@ nav {
 .social-link {
     margin-right: 45px;
     opacity: 0.8;
+    position: relative;
 }
+
+.social-link::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -5px;
+    right: 0;
+    width: 0;
+    height: 2px;
+    background-color: #fff;
+    opacity: 0.8;
+    transition: .3s;
+}
+.social-link:hover::after {
+    width: 100%;
+    opacity: 1;
+}
+
 .social-link:hover {
     opacity: 1;
 }
