--- a/assets/css/icons.css
+++ b/assets/css/icons.css
@@ -1,45 +1,44 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot');
-  src:  url('../fonts/icomoon.eot') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf') format('truetype'),
-    url('../fonts/icomoon.woff') format('woff'),
-    url('../fonts/icomoon.svg?') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+   font-family: "icomoon";
+   src: url("../fonts/icomoon.eot");
+   src: url("../fonts/icomoon.eot") format("embedded-opentype"), url("../fonts/icomoon.ttf") format("truetype"),
+      url("../fonts/icomoon.woff") format("woff"), url("../fonts/icomoon.svg?") format("svg");
+   font-weight: normal;
+   font-style: normal;
+   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  /* speak: never; */
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
+[class^="icon-"],
+[class*=" icon-"] {
+   /* use !important to prevent issues with browser extensions that change fonts */
+   font-family: "icomoon" !important;
+   /* speak: never; */
+   font-style: normal;
+   font-weight: normal;
+   font-variant: normal;
+   text-transform: none;
+   line-height: 1;
 
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+   /* Better Font Rendering =========== */
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-envelop:before {
-  content: "\e945";
+   content: "\e945";
 }
 .icon-cross::before {
-  content: "\ea0f";
+   content: "\ea0f";
 }
 .icon-arrow-up:before {
-  content: "\ea32";
+   content: "\ea32";
 }
 .icon-telegram:before {
-  content: "\ea95";
+   content: "\ea95";
 }
 .icon-vk:before {
-  content: "\ea98";
+   content: "\ea98";
 }
 .icon-github:before {
-  content: "\eab0";
+   content: "\eab0";
 }
